<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    tools:context=".Dashboard"
    android:orientation="vertical">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:padding="20dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_name">
        </ImageView>

        <ImageView
            android:background="@color/banner_background"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:padding="5dp"
            android:src="@drawable/ic_action_add_icon" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/bevan"
                    android:text="@string/Dog_up"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <RelativeLayout
                    android:background="@color/white"
                    android:elevation="8dp"
                    android:layout_below="@id/app_name"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_width="wrap_content"
                        android:text="@string/search_text" />

                    <ImageView
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_height="30dp"
                        android:layout_marginRight="15dp"
                        android:layout_width="30dp"
                        android:src="@drawable/ic_action_search_icon" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card1"
                        android:elevation="8dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp">
                        <ImageView
                            android:layout_centerInParent="true"
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@mipmap/ic_corgi_foreground" />
                    </RelativeLayout>
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dogs"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card2"
                        android:elevation="8dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp">
                        <ImageView
                            android:layout_centerInParent="true"
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@mipmap/ic_corgi_foreground" />
                    </RelativeLayout>
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dogs"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card3"
                        android:elevation="8dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp">
                        <ImageView
                            android:layout_centerInParent="true"
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@mipmap/ic_corgi_foreground" />
                    </RelativeLayout>
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dogs"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card4"
                        android:elevation="8dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp">
                        <ImageView
                            android:layout_centerInParent="true"
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@mipmap/ic_corgi_foreground" />
                    </RelativeLayout>
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dogs"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/banner_background_light">

                <LinearLayout
                    android:background="@color/banner_background"
                    android:id="@+id/featured_background"
                    android:layout_height="280dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="170dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50dp"
                        android:fontFamily="monospace"
                        android:lineHeight="24sp"
                        android:text="text"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:text="descriptio@n" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_toRightOf="@id/featured_background"
                    android:background="@color/home_background" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/actor"
                        android:text="Most"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="All"></TextView>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/actor"
                        android:text="Most"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="All"></TextView>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>